<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:radius="50dp"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/write_your_e_mail_here"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_marginStart="20dp" />

            <EditText
                android:id="@+id/email_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:background="@drawable/custome_buttons"
                android:textSize="20sp"
                android:inputType="textEmailAddress"/>


            <TextView
                android:id="@+id/password_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/write_password_here"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_marginStart="20dp" />

            <EditText
                android:id="@+id/password_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custome_buttons"
                android:textSize="20sp"
                android:inputType="textPassword"/>


            <TextView
                android:id="@+id/user_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:visibility="gone"
                android:text="@string/write_your_user_name_here"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_marginStart="20dp" />

            <EditText
                android:id="@+id/user_name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:visibility="gone"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custome_buttons"
                android:textSize="20sp"
                android:inputType="textPersonName"/>


            <TextView
                android:id="@+id/phone_number_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:visibility="gone"
                android:text="@string/write_your_phone_number_here"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_marginStart="20dp" />

            <EditText
                android:id="@+id/phone_number_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:visibility="gone"
                android:background="@drawable/custome_buttons"
                android:textSize="20sp"
                android:inputType="phone"/>


            <TextView
                android:id="@+id/location_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:visibility="gone"
                android:text="@string/write_your_location_here"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_marginStart="20dp" />

            <EditText
                android:id="@+id/location_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:visibility="gone"
                android:background="@drawable/custome_buttons"
                android:textSize="20sp"
                android:inputType="text"/>

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:visibility="gone"
                android:src="@drawable/user_pic_tab"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/image_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_your_profile_picture"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:layout_gravity="center"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:layout_marginTop="15dp"
                android:background="@drawable/register_button"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:layout_marginTop="15dp"
                android:background="@drawable/register_button"
                android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/logout_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/logout"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/register_button"
                    android:textColor="@android:color/white"
                    android:visibility="gone"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>