<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a4a4a4"
    android:orientation="vertical"
    tools:context=".FourButtons">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/myToolbar"
            layout="@layout/toolbar" />


        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3430687372646829/9482096059"/>

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_system"
            android:textColor="@android:color/white"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:text="@string/to_select_spare_parts_you_need"
            android:textSize="15sp"
            android:layout_gravity="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/img1"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:background="@drawable/xbraking_sys"/>

            <Button
                android:id="@+id/img2"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:background="@drawable/electrical_sys"/>

            <TextView
                android:id="@+id/text_test_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="126dp"
                android:text="@string/braking_sys"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp" />

            <TextView
                android:id="@+id/text_test_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/img2"
                android:layout_alignTop="@+id/text_test_1"
                android:text="@string/electrical_sys"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_alignLeft="@+id/img2" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/img3"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:background="@drawable/xengine_and_transmission_sys"/>

            <Button
                android:id="@+id/img4"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:background="@drawable/suspension_and_steering"/>

            <TextView
                android:id="@+id/text_test_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="60dp"
                android:layout_marginTop="126dp"
                android:text="@string/power_train_sys"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="60dp" />

            <TextView
                android:id="@+id/text_test_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/img4"
                android:layout_alignTop="@+id/text_test_3"
                android:text="@string/suspension_sys"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_alignLeft="@+id/img4" />

        </RelativeLayout>

        <include
            layout="@layout/activity_contact_with_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp" />

    </LinearLayout>
</ScrollView>


    <ImageView
        android:layout_width="120dp"
        android:layout_height="247dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/piston_stamp" />

</RelativeLayout>